Cleaned up the leftovers from moving to context, fixed tile layer removal, hooked up a scrollbar to the sidebar.

--- a/src/App.css
+++ b/src/App.css
@@ -29,6 +29,7 @@ button {
   left: 0;
   bottom: 0;
   width: 22rem;
+  height: 100%;
   transition: transform 0.3s;
   /* overflow: hidden; */
 }
